[package]
name = "ludum-dare-44"
version = "0.1.0"
description = "Ludum Dare 44"
repository = "git@github.com:mysterycommand/ludum-dare-44.git"
authors = ["Matt Hayes <matt@mysterycommand.com>"]
license = "(MIT OR Apache-2.0)"
categories = ["ludum dare", "game", "game jam", "amethyst"]
readme = "./README.md"
edition = "2018"

[dependencies]
amethyst = "0.10.0"
